[metadata]
name         = nikola_carpentry
version      = 0.0.0
author = Jon Rickman
license = MIT
license_file = LICENSE

[options]
zip_safe = false
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =

[options.packages.find]
where=src

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = '--verbose'
testpaths = ['tests']

[flake8]
max-line-length = 160
exclude =
    migrations
    __pycache__
    manage.py
    settings.py
    venv
    .venv
per-file-ignores =
    */models.py: E501
    */__init__.py: F401, F403
    app.py: F401, F403
    config.py: W191
